<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forecast_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background_color">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/current_forecast_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:visibility="gone"
            app:cardCornerRadius="24dp"
            app:cardElevation="@dimen/double_margin"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/current_forecast_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sky_day"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginTop="@dimen/double_margin"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Brasov" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/location_name"
                    app:layout_constraintTop_toBottomOf="@id/location_name"
                    tools:text="Cloudy" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/double_margin"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toStartOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/location_name"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    tools:text="24*C" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/feels_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/location_name"
                    app:layout_constraintTop_toBottomOf="@id/current_temperature"
                    tools:text="Feels like 20*C" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/local_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/big_text_size"
                    app:layout_constraintEnd_toStartOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/location_name"
                    app:layout_constraintTop_toBottomOf="@id/feels_like"
                    tools:text="Local time: 12:58" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/updated_at"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/double_margin"
                    android:maxLines="2"
                    android:textSize="@dimen/big_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/current_forecast_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/location_name"
                    app:layout_constraintTop_toBottomOf="@id/local_time"
                    tools:text="Updated at: 13:10" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middle_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/current_forecast_image"
                    android:layout_width="@dimen/current_forecast_image_size"
                    android:layout_height="@dimen/current_forecast_image_size"
                    android:layout_marginEnd="@dimen/double_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecast_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_forecast_card"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
