<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.magiclane.sdk.core.GemSurfaceView
            android:id="@+id/gem_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:paddingLeftWithSystemWindowInsets='@{@dimen/small_padding}'
            app:paddingRightWithSystemWindowInsets='@{@dimen/small_padding}'
            app:paddingTopWithSystemWindowInsets='@{"8dp"}'
            app:title="@string/app_name"
            app:titleTextColor="@color/on_primary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/follow_gps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_gps_fixed_24"
            android:visibility="gone"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toTopOf="@id/location_details_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/on_primary"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_details_container"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:paddingBottomWithSystemWindowInsets="@{@dimen/no_extra_inset}"
            app:paddingLeftWithSystemWindowInsets="@{@dimen/no_extra_inset}">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_margin="@dimen/big_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:textColor="@color/on_background"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/close_button"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:textColor="@color/on_background"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintEnd_toStartOf="@id/close_button"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/big_padding"
                app:icon="@drawable/cancel_24px"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/header_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="image,name,description" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/forecast_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_barrier">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/forecast_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/current_forecast" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/daily_forecast_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/daily_forecast" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/hourly_forecast_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/hourly_forecast" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/warnings_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/warnings" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/warnings_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:paddingBottomWithSystemWindowInsets="@{@dimen/no_extra_inset}"
            app:paddingLeftWithSystemWindowInsets="@{@dimen/no_extra_inset}">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/warnings_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:text="@string/weather_warnings"
                android:textColor="@color/on_background"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/warnings_close_button"
                app:layout_constraintEnd_toStartOf="@id/warnings_close_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/warnings_close_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/warnings_close_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/big_padding"
                app:icon="@drawable/cancel_24px"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/warnings_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warnings_close_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/surface"
            android:padding="@dimen/list_item_padding"
            android:textColor="@color/on_surface"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:paddingBottomWithSystemWindowInsets="@{@dimen/no_extra_inset}"
            app:paddingLeftWithSystemWindowInsets="@{@dimen/no_extra_inset}"
            app:paddingRightWithSystemWindowInsets="@{@dimen/no_extra_inset}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
